feat: clean up k8s details in run after deletion